# data-mining-htw

./: 2025_10_07_EvalExer_Part_I_Databases.ipynb  ddad.txt  main.py  pyproject.toml  requirements.txt
notes/: part1.txt
src/data_mining_htw/todo/: main.py
src/notebooks/: 2025_10_07_EvalExer_Part_I_Databases.html  2025_10_07_EvalExer_Part_I_Databases.ipynb
