[project]
authors = [{name = "FidFenix", email = "fidel1forever@gmail.com"}]
dependencies = []
name = "data-mining-htw"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
data_mining_htw = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
jupyter = ">=1.1.1,<2"
numpy = ">=2.3.3,<3"
pandas = ">=2.3.3,<3"
